# taskman

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md  taskman.desktop
components/: CMakeLists.txt
components/backends/: CMakeLists.txt
components/backends/interface/: CMakeLists.txt
components/backends/interface/include/taskman/backend/: IBackend.h  IConnectionTab.h  IProcessItemModel.h  ISortFilterProxyModel.h  ProcessData.h
components/backends/interface/include/taskman/backends/: IBackend.h  ProcessData.h  ProcessTree.h  ProcessTreeBuilder.h  SystemInformation.h
components/backends/interface/src/: IBackend.cpp  IConnectionTab.cpp  IProcessItemModel.cpp  ISortFilterProxyModel.cpp  ProcessData.cpp  ProcessTreeBuilder.cpp
components/backends/local_interface/: CMakeLists.txt
components/backends/local_interface/include/taskman/backends/: ILocalBackend.h
components/backends/local_interface/src/: ILocalBackend.cpp
components/backends/local_posix/: CMakeLists.txt
components/backends/local_posix/include/taskman/backend/local_posix/: LocalPosixBackend.h  LocalPosixConnectionTab.h  PosixProcessItemModel.h
components/backends/local_posix/include/taskman/backends/: LocalPosixBackend.h
components/backends/local_posix/src/: LocalPosixBackend.cpp  LocalPosixConnectionTab.cpp  PosixProcessItemModel.cpp
components/client/: CMakeLists.txt
components/client/include/taskman/client/: MainWindow.h
components/client/src/: MainWindow.cpp  main.cpp
components/common/: CMakeLists.txt
components/common/include/taskman/common/: FilterParamType.h  IntervalUpdateReminder.h  ThreadsafeConstReadProxy.h  ThreadsafeQueue.h  ThreadsafeSharedConstPointer.h  bit_ops.h  concurrent.h  declaration.h  type_traits.h  types.h
components/common/src/: IntervalUpdateReminder.cpp  concurrent.cpp
components/common_ui/: CMakeLists.txt
components/common_ui/include/taskman/common_ui/: FileInputWidget.h
components/common_ui/src/: FileInputWidget.cpp
components/connections/: CMakeLists.txt
components/connections/interface/: CMakeLists.txt
components/connections/interface/include/taskman/connections/: IConnection.h
components/connections/interface/src/: IConnection.cpp
components/connections/local_interface/: CMakeLists.txt
components/connections/local_interface/include/taskman/connections/: ILocalConnection.h
components/connections/local_interface/src/: ILocalConnection.cpp
components/connections/local_posix/: CMakeLists.txt
components/connections/local_posix/include/taskman/connections/: LocalPosixConnection.h
components/connections/local_posix/src/: LocalPosixConnection.cpp
components/frontends/: CMakeLists.txt
components/frontends/base/: CMakeLists.txt
components/frontends/base/include/taskman/frontends/: BaseConnectionTab.h  BaseFilterPopup.h  BaseProcessItemModel.h  BaseSortFilterProxyModel.h  FrontendProcessFilter.h
components/frontends/base/src/: BaseConnectionTab.cpp  BaseFilterPopup.cpp  BaseProcessItemModel.cpp  BaseSortFilterProxyModel.cpp  FrontendProcessFilter.cpp
components/frontends/posix/: CMakeLists.txt
components/frontends/posix/include/taskman/frontends/: PosixProcessItemModel.h
components/frontends/posix/src/: PosixProcessItemModel.cpp
components/platform_profiles/: CMakeLists.txt
components/platform_profiles/interface/: CMakeLists.txt
components/platform_profiles/interface/include/taskman/platform_profiles/: IPlatformProfile.h  ProcessAction.h  ProcessField.h  ProcessFilterType.h
components/platform_profiles/interface/src/: IPlatformProfile.cpp
components/platform_profiles/posix/: CMakeLists.txt
components/platform_profiles/posix/include/taskman/platform_profiles/: PosixPlatformProfile.h
components/platform_profiles/posix/include/taskman/platform_profiles/posix/: constants.h  process_action_ids.h  process_field_bits.h  process_filter_type_ids.h
components/platform_profiles/posix/src/: PosixPlatformProfile.cpp
components/platform_runtimes/interface/: CMakeLists.txt
components/platform_runtimes/interface/include/taskman/platform_runtimes/: IPlatformRuntime.h  IProcessFilter.h  IProcessReader.h
components/platform_runtimes/interface/src/: IPlatformRuntime.cpp  IProcessFilter.cpp  IProcessReader.cpp
components/platform_runtimes/posix/: CMakeLists.txt
components/platform_runtimes/posix/include/taskman/platform_runtimes/: PosixPlatformRuntime.h
components/platform_runtimes/posix/include/taskman/platform_runtimes/posix/: PosixActionRunner.h  PosixProcessFilter.h  PosixProcessReader.h
components/platform_runtimes/posix/include/taskman/platform_runtimes/posix/process_filters/: PosixBaseProcessFilter.h  PosixOpenFileProcessFilter.h
components/platform_runtimes/posix/src/: PosixActionRunner.cpp  PosixBaseProcessFilter.cpp  PosixOpenFileProcessFilter.cpp  PosixPlatformRuntime.cpp  PosixProcessFilter.cpp  PosixProcessReader.cpp
